# copperhead

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  HISTORY.md  LICENSE  Makefile  README.md  decorators.ipynb  file_io.ipynb  index.ipynb  mkdocs.yml  pyproject.toml  pyrightconfig.json  settings.ini  tox.ini
.github/: ISSUE_TEMPLATE.md
copperhead/: __init__.py  _nbdev.py  decorators.py  file_io.py
docs/: _config.yml  api.md  decorators.html  file_io.html  index.html  installation.md  sidebar.json  usage.md
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
src/: lib.rs
tests/: __init__.py  standard_io.py  test_copperhead.py
