[package]
name = "copperhead"
version = "0.1.0"
authors = ["Anthony Hevia <anthony@hevia.dev>"]
edition = "2018"

[package.metadata.maturin]
classifier = [
    "Programming Language :: Python",
    "Programming Language :: Rust"
]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[lib]
name = "copperhead-utils"
crate-type = ["cdylib"]